--- a/Draft3.tex
+++ b/Draft3.tex
@@ -48,7 +48,7 @@ Some of these variants are being imputed onto genotype data and reach genome wid
 \end{abstract}
 
 			\section{Introduction}
-	\subsection{Big Data}			
+	\subsection{Reference cohorts}			
 The last 5 years has seen an increase in the number of individuals genotyped through private companies or medical research cohorts. 
 Larger sample sizes allow researchers to identify finer resolution statistically significant differences between groups of individuals. 
 Mutations associated to a disease can be identified by comparing the genomes of healthy individuals to those afflicted by a disease. 
