--- a/Draft3.tex
+++ b/Draft3.tex
@@ -50,7 +50,10 @@ Some of these variants are being imputed onto genotype data and reach genome wid
 			\section{Introduction}
 		
 	\subsection{Reference Cohorts}			
-The last 5 years has seen an increase in the number of individuals genotyped through private companies or medical research cohorts. 
+
+
+
+The last 5 years have seen an increase in the number of individuals genotyped through private companies or medical research cohorts. 
 Larger sample sizes allow researchers to identify finer resolution statistically significant differences between groups of individuals. 
 Mutations associated to a disease can be identified by comparing the genomes of healthy individuals to those afflicted by a disease. 
 The mutations commonly found in patients and rarely in controls might be associated to the disease in question.
@@ -60,10 +63,47 @@ For this reason, careful consideration must be taken when including individuals 
 Benign mutations at high frequencies in one populations might be exceedingly rare in another population.
 Therefore, population wide differences in mutations must be included as covariates to avoid spurious associations.
 
-	\subsection{Imputation}
-Genome wide associations using large cohorts have lead to developments in the identification of rare genetic diseases as well as the risk prediction to certain types of cancer and diseases. 
-Despite drastic reductions in cost of whole genome sequencing, it remains an expensive test for large sample sizes.
-For this reason, genotype data is often imputed to increase power for association studies in a cost effective way.
+\sgcomment{This intro paragraph is much too vague -- it reads like general thoughts about genetics at large. We need to be much more concise. I would start with something like:}
+
+The last 5 years have seen a drastic increase in the amount and quality of human genomes sequence data. Hapmap \cite{}, the 1000 Genomes Project \cite{}, and the Simons Diversity project \cite{}, for example, have made thousands of genomes publicly available for population and medical genetic analyses. Many more genomes are available indirectly through servers providing imputation services \cite{haplotype reference consortium} or variant frequency estimation \cite{GnomAD}. 
+
+Many of these large datasets comprise have been assembled over many years. The first sequenced genomes in the 1000 Genomes project, for example, were sequenced XX years ago, at a time when \sgcomment{blah blah blah}. Because of the extraordinary value of freely available data, this early data from the 1000 Genomes Project is still widely used as a reference panel for ...
+
+Yet this data is far from perfect \sgcomment{cite papers that have pointed out issues}. This raises the question of whether and how such legacy data should be included in contemporary analyses. Here we point out how large and previously unreported batch effects in the early phases of the 1000 Genomes Project still lead to incorrect genetic conclusions through population genetic analyses and indirect use through prominent imputation servers.  
+
+
+\subsection{Motivations}
+
+A genome wide mutational signature can be measured by taking the sum of all the different types of mutations in an individual. \sgcomment{This is a procedural definition. You need a conceptual definition! Something like:} Mutation rate at a given base pair has long been known to depend on the neighbouring nucleotides \cite{}. Finer scale patterns have been reported in \cite{}. \sgcomment {then define mutational signature (ideally, more of a biological definition), and move on to the Harris paper}
+
+
+
+In 2015, Harris et al reported an overrepresentation of the TCC to TTC mutation in European populations. \sgcomment{quantify}
+Harris and Pritchard published a follow up study comparing how various ethnic groups differ from one another with respect to their mutational spectrum. 
+In this paper, they proposed that not only is there a distinct mutational spectrum difference in Europeans, but that these changes are present in most human populations. 
+One result was of particular interest to our research group \sgcomment{unless needed, no need to involve our persons in the study} : the heterogeneously distributed signal found in a subset of Japanese individuals. 
+A mutational signature that is present unevenly across a population is unexpected because it suggested strong population structure; unlikely for a dense population living on an archipelago.
+
+While trying to follow up on this observation, we were unable to reproduce this particular observation in a different dataset. Tracing back the source of the discrepancy between the two datasets, we identified a strong and previously unreported batch effect in the 1000 Genomes Project data, and found that this batch effect led to spurious results in a number of recently published studies. 
+
+Here we discuss the source of the batch effect and the ways in which these batch effects contaminated a number of recent studies. Fortunately, the main conclusions of \sgcomment{most of} these studies remain supported by other data.  Yet this begs the question: When should we retire legacy data?
+
+
+%\subsection{Imputation}
+%Genome wide associations using large cohorts have lead to developments in the identification of rare genetic diseases as well as the risk prediction to certain types of cancer and diseases. Despite drastic reductions in cost of whole genome sequencing, it remains an expensive test for large sample sizes.
+%For this reason, genotype data is often imputed to increase power for association studies in a cost effective way.
+
+%\sgcomment{Too wordy (also, readers of Nature genetics know about imputation!: Despite drastic reduction in sequencing costs, genotyping and imputation remain a more affordable and popular approach for large-scale cohorts.}
+
+
+
+
+
+
+
+
+
+
 
 \luke{cut paragraph to discussion}
 
@@ -71,35 +111,18 @@ Combining data can be an issue when the quality of the data produced can vary be
 The errors in one dataset don't disappear when they are combined with another higher quality one. 
 Many of the legacy datasets produced using dated sequencing technologies have been known to contain a higher rate of false positives than their more recent counterparts.
 Is it time to retire legacy data? 
+\sgcomment{As a style issue: you tend to write sentences without indicating the logical flow between them. It makes it hard to follow. }
 
-	\subsection{Mutation Spectrum} 
-
-A genome wide mutational signature can be measured by taking the sum of all the different types of mutations in an individual. 
-The signatures from individuals in the same population will have a tendency to be more similar due to shared ancestry.
-In 2015, Harris et al reported an overrepresentation of the TCC to TTC mutation in European populations.
-Harris and Pritchard published a follow up study comparing how various ethnic groups differ from one another with respect to their mutational spectrum. 
-In this paper, they proposed that not only is there a distinct mutational spectrum difference in Europeans, but that these changes are present in most human populations. 
-One result was of particular interest to our research group : the heterogeneously distributed signal found in a subset of Japanese individuals. 
-A mutational signature that is present unevenly across a population is unexpected because it suggested strong population structure; unlikely for a dense population living on an archipelago.
-
-	\subsection{Motivations}
-This project was motivated by this unusual population genetics observation in a recent publication by Harris et. al, that the 1000 Genomes Project (1kGP) Japanese population seem to be partitioned in two clusters of diff mutation rates. 
-This heterogeneously distributed mutational signal was unexpected as a signal of this nature could either be due to population structure, a mutagen, or a technical bias.
-In investigating this mutational signature, we were unable to reproduce the results using a larger and higher quality dataset and concluded that this signal can be attributed to sequencing error.
-
-
-This study is the result of an investigation in the quality of the 1kGP dataset.
-To begin, we will discuss the discrepancy between the Japanese samples from the 1kGP and a more recent high quality dataset. 
-We then consider methods to discriminate sequencing errors resulting from dated technologies.
-Next, we explore more broadly how low quality variants remain embedded in other populations of the 1kGP.
-Finally, we will discuss the impact these variants have on modern analyses.
+	
 
 			\section{Results}
 	\subsection{A peculiar mutational signature in Japan}			
-If two groups of individuals are sampled from the same population, we expect there to be little deviation in allele frequencies between the two groups.
-However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and a more recent dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups.
-Surprisingly, the variants responsible for the signal observed by Harris et. al (2017) were missing in the more recent dataset \ref{Figure1}. 
-We also noticed that the individuals carrying these mutations all had lower average quality scores of mapped bases.
+If two groups of individuals are sampled from the same population, we expect there to be little deviation in allele frequencies between the two groups. \sgcomment {Here again, you are a bit procedural. It's useful to explain to the reader the logical flow of how you got to doing what you are doing: Harris et al reported an excess of XYZ to XWZ mutations in some Japanese individuals. While trying to follow up on this observations in a larger cohort of XXX Japanese individuals, [[some info about cohort]], we did not find this particular signature.}
+However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups. \sgcomment{These mismatches were maintained after filtering for low-quality regions of the human genome and standard metrics such as Hardy-Weinberg equilibrium, ...}
+
+Once mismatch sites were removed from the 1kGP data, the XYZ - W \sgcomment{I would call the effect by the name of the signature rather than harris et al -- more descriptive, less personal.} signal disappears \ref{Figure1} \sgcomment{usually you give a descriptie name to labels, latex will figure out the numbers!}, suggesting a technical artifact rather than a population structure effect. Regressions against different quality metrics provided by the 1kGP revealed that mean mapping quality per mapped base pair was an excellent correlate with prevalence of the XYZ mutational signature in 1kGP, with low-quality individuals showing elevated rates of the signature.  \ref{Figure1}
+
+ individuals carrying these mutations all had lower average quality scores of mapped bases.
 This suggested that individuals with lower quality were driving this signal.
 
 \begin{figure}
