added Mathieu as author and changed sentence about seq tech

--- a/Draft3.tex
+++ b/Draft3.tex
@@ -24,6 +24,7 @@
 \title{Legacy Data Confounds Modern Genomics Studies}
 
 \author[1,2]{Luke Anderson-Trocm\'e}
+\author[1,2]{Mathieu Bourgey}
 \author[1,2]{Simon Gravel}
 
 \affil[1]{Department of Human Genetics, McGill University, Montreal, QC H3A 0G1, Canada}
@@ -160,8 +161,7 @@ One way to assess the validity of these unusual variants is to see if they are p
 	\subsection{Sequencing quality over time}
 We turned our attention to the other populations in the 1kGP, we found that the sequencing done in phase 1 was more variable and overall tended to include lower quality sequencing data \ref{MapQual}.
 The sequencing quality of individuals increases over time \ref{MapQual}. 
-\todo{What sequencers were used in each phase?}
-By 2011 the sequencing quality seems to level off.
+By 2011 the sequencing quality seems to level off, this also coincides with the phasing out of older sequencing technologies. 
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{MapQualOverTime.jpg}
 
