--- a/Draft3.tex
+++ b/Draft3.tex
@@ -121,10 +121,11 @@ Is it time to retire legacy data?
 If two groups of individuals are sampled from the same population, we expect there to be little deviation in allele frequencies between the two groups. \sgcomment {Here again, you are a bit procedural. It's useful to explain to the reader the logical flow of how you got to doing what you are doing: Harris et al reported an excess of XYZ to XWZ mutations in some Japanese individuals. While trying to follow up on this observations in a larger cohort of XXX Japanese individuals, [[some info about cohort]], we did not find this particular signature.}
 However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups. \sgcomment{These mismatches were maintained after filtering for low-quality regions of the human genome and standard metrics such as Hardy-Weinberg equilibrium, ...}
 
-Once mismatch sites were removed from the 1kGP data, the XYZ - W \sgcomment{I would call the effect by the name of the signature rather than harris et al -- more descriptive, less personal.} signal disappears \ref{Figure1} \sgcomment{usually you give a descriptie name to labels, latex will figure out the numbers!}, suggesting a technical artifact rather than a population structure effect. Regressions against different quality metrics provided by the 1kGP revealed that mean mapping quality per mapped base pair was an excellent correlate with prevalence of the XYZ mutational signature in 1kGP, with low-quality individuals showing elevated rates of the signature.  \ref{Figure1}
+Once mismatch sites were removed from the 1kGP data, the XYZ - W \sgcomment{I would call the effect by the name of the signature rather than harris et al -- more descriptive, less personal.} signal disappears \ref{Figure1} \sgcomment{usually you give a descriptie name to labels, latex will figure out the numbers!}, suggesting a technical artifact rather than a population structure effect. Regressions against different quality metrics provided by the 1kGP revealed that mean mapping quality per mapped base pair was an excellent correlate with prevalence of the XYZ mutational signature in 1kGP, with low-quality individuals showing elevated rates of the signature. (\sgcomment{show supplementary Figure where you did the correlations})
+ 
+ Thus sequences with low mappability harbor mutations that reproduce poorly across studies and exhibit a particular mutational signature. 
 
- individuals carrying these mutations all had lower average quality scores of mapped bases.
-This suggested that individuals with lower quality were driving this signal.
+
 
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{Figure1.jpg}
@@ -143,7 +144,12 @@ The same analysis was performed independently for each of the populations in the
  \label{Figure1}
 \end{figure}
 
-To further investigate	 the extent to which low quality individuals were associated to spurious mutations, we performed a genome-wide association (GWA) study  \ref{Figure1}. GWA studies are commonly used to find genomic regions associated to biologically relevant traits. In this case, we are using this analysis in a more unconventional way to identify regions of the genome that are associated to biologically irrelevant traits like SNPs associated to individuals with low quality.
+To further investigate	 the extent to which low quality individuals \sgcomment{low quality sequence data! "low quality individuals" (= deplorables?) can get you in trouble!}  were associated to spurious mutations, we performed a genome-wide association (GWA) study  \ref{Figure1}. \sgcomment{I would rather have: To identify SNPs that are associated with low quality, we performed }
+
+
+
+
+GWA studies are commonly used to find genomic regions associated to biologically relevant traits. In this case, we are using this analysis in a more unconventional way to identify regions of the genome that are associated to biologically irrelevant traits like SNPs associated to individuals with low quality.
  
 Using the linear GWA study function offered by PLINK, we were able to identify $625\ \  p < 10^{-8}$ and $1048\ \ p < 10^{-6}$ SNPs that were associated to the average quality of SNPs mapped for an individual \ref{Figure1}.  This GWA study included 104 individuals, \todo{000} of them were sequenced in phase 1 while the rest were sequenced in phase 3 of the 1000 Genomes Project.
 The variants that are associated to the quality of mapped bases have an enrichment in *AC${\rightarrow}$*CC mutations. 
